[package]
name = "pipev"
authors = ["Onojeta Brown <onosbrown.saved@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Educational version of pipeviewer"
homepage = "https://github.com/onos9/pipeviewer"
repository = "https://github.com/onos9/pipeviewer"
readme = "README.md"
keywords = ["pipeviewer", "pv", "pipe", "educational"]
categories = ["command-line-utilities"]
# license = "MIT OR Apache-2.0,"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1" }
crossbeam = "0.8.2"
crossterm = "0.27.0"

